--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "whis": "^2.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
