add redis cache

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 WHOIS_APIKEY=at_2Xtkp6v1CzbdNwCKxUwgS3OeLqP9F
 WHOIS_URL=https://www.whoisxmlapi.com/whoisserver/WhoisService
+
+REDIS_HOST=redis-11248.c98.us-east-1-4.ec2.cloud.redislabs.com
+REDIS_PORT=11248 
+REDIS_DB=1
+REDIS_PASSWORD=linkapitest
